SCRUM-235: GET /products/{id}/prices — return full list of units